hn_tests/failing/comp-3.hn
comp g = {
	h x = g
	h
}